displays city weather

--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
         <button class="San-Francisco">San Francisco</button>
         <button class="Washington-DC">Washington DC</button> -->
       </div>
-      <div class="weather-display-main hide"></div>
+      <div class="weather-display-main hide">
+        <h2 id="weather-city"></h2>
+        <ul id="weather-info">
+          <li id="weather-icon" class="weather-list">
+            <img id="weather-icon-image" alt="weather-icon" />
+          </li>
+          <li id="weather-humidity" class="weather-list"></li>
+          <li id="weather-wind-speed" class="weather-list"></li>
+        </ul>
+      </div>
       <div class="five-day-forecast hide">
-        <!-- <div class="day1"></div>
+        <div class="day1"></div>
         <div class="day2"></div>
         <div class="day3"></div>
         <div class="day4"></div>
-        <div class="day5"></div> -->
+        <div class="day5"></div>
       </div>
       <script src="./Assets/js/script.js"></script>
     </main>
