all info can be displayed on cards

--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
           <li id="weather-wind-speed" class="weather-list"></li>
         </ul>
       </div>
-      <div class="five-day-forecast hide">
-        <div class="day1"></div>
-        <div class="day2"></div>
-        <div class="day3"></div>
-        <div class="day4"></div>
-        <div class="day5"></div>
-      </div>
+      <div class="five-day-forecast hide"></div>
       <script src="./Assets/js/script.js"></script>
     </main>
   </body>
