fixed quick search button storage

--- a/index.html
+++ b/index.html
@@ -15,16 +15,10 @@
       <div class="search-container">
         <input type="text" class="city" placeholder="Enter City Name" />
         <button type="submit" class="search-city-button">Search City</button>
+        <div class="quick-display"></div>
         <button class="search-button hide" type="submit">
           Search Weather Info
         </button>
-        <!-- <button class="Atlanta">Atlanta</button>
-        <button class="Chicago">Chicago</button>
-        <button class="Houston">Houston</button>
-        <button class="Miami">Miami</button>
-        <button class="New-York">New York</button>
-        <button class="San-Francisco">San Francisco</button>
-        <button class="Washington-DC">Washington DC</button> -->
       </div>
       <div class="weather-display-main hide">
         <h2 id="weather-city"></h2>
